<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="9">



    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="3"
        android:layout_marginTop="10dp" >


        <TextView
            android:id="@+id/s_date"
            android:textSize="18dp"
            android:layout_weight="1"
            android:hint="@string/select_date"
            android:layout_gravity="right"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Spinner
            android:id="@+id/s_sp_shift"
            android:layout_weight="1.29"
            android:layout_marginLeft="0dp"
            android:background="@drawable/spinner_blue_border"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />




    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="2">
        <TextView
            android:text="@string/weight"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="18dp"
            android:textSize="20dp"
            android:layout_width="0dp"

            android:layout_height="40dp" />

        <EditText
            android:id="@+id/s_weight"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:hint="@string/enter_weight"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2">

        <TextView
            android:text="@string/fat"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/s_fat"
            android:textSize="20dp"
            android:layout_weight="1"
            android:hint="@string/enter_fat"
            android:maxLength="4"
            android:paddingLeft="10dp"
            android:inputType="numberDecimal"
            android:background="@drawable/rectangle"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/s_snf_home"
            android:text="@string/snf"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/s_snf"
            android:textSize="20dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:maxLength="4"
            android:hint="@string/enter_snf"
            android:inputType="numberDecimal"
            android:background="@drawable/rectangle"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp" />

    </LinearLayout>



    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/lbl_snf_home"
            android:text="@string/rate_per_ltr"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/s_rate"
            android:textSize="20dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:maxLength="4"
            android:hint="Rate"
            android:inputType="numberDecimal"
            android:background="@drawable/rectangle"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight=".9"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/s_click_total"
            android:text="@string/total_rt"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/s_total"
            android:textSize="20dp"
            android:text="@string/total_rt"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="Total Amount"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight=".9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">


        <Button
            android:layout_weight="1"
            android:id="@+id/s_btn_update"
            android:text="Save"
            android:textSize="20dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:textColor="@color/app_background"
            android:layout_gravity="center"
            android:background="@drawable/button_blue"
            android:layout_width="0dp"
            android:layout_height= "match_parent" />

    </LinearLayout>




</LinearLayout>