<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/rectangle"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:layout_weight=".8"
            android:layout_width="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:text="@string/serial_no"
                android:id="@+id/lv_sno"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="visible"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:textSize="17dp"
                android:layout_height="45dp"
                />

            <TextView
                android:text="@string/code"
                android:id="@+id/lv_code"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="visible"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:textSize="17dp"
                android:layout_height="45dp"
                />


            <TextView
                android:text="@string/lw_name"
                android:id="@+id/lv_name"
                android:layout_gravity="center"
                android:gravity="center"

                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="17dp"
                android:layout_height="45dp"
                />



            <TextView
                android:id="@+id/lv_mobile"
                android:text="@string/mobile"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="17dp"
                android:layout_height="45dp"
                />

        </LinearLayout>



    </LinearLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_weight="9"
        >

        <ListView
            android:id="@+id/saved_listview"
            android:layout_width="match_parent"


            android:layout_height="match_parent">
        </ListView>


        <ImageView
            android:layout_marginBottom="20dp"
            android:id="@+id/imgShare"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:foregroundGravity="bottom"
            android:background="@drawable/images"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>





</LinearLayout>